--- a/fake_news_detection_model_colab.ipynb
+++ b/fake_news_detection_model_colab.ipynb
@@ -3022,7 +3022,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Remove all tokens\n",
+        "# Removing unnecessary tokens\n",
         "def remove_tokens(text):\n",
         "    # Remove repeating characters\n",
         "    text = re.sub(r'(\\w)\\1+', r'\\1', text)\n",
@@ -4441,7 +4441,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Use TfidfVectorizer to add weight to repeated words\n",
+        "#Use TfidfVectorizer tool converts text in to numeral format and adds weight to repeated words\n",
+        "\n",
         "Vectorizer = TfidfVectorizer(max_features=100)\n",
         "X = Vectorizer.fit_transform(clean_news_data_pd_df['final_news']).toarray()\n",
         "feature_names = Vectorizer.get_feature_names_out()"
@@ -7508,10 +7509,10 @@
         "# Define the model.\n",
         "nn = tf.keras.models.Sequential()\n",
         "\n",
-        "# First hidden layer\n",
+        "# Input layer\n",
         "nn.add(tf.keras.layers.Dense(units=80, activation='relu', input_dim=X_train_scaled.shape[1]))\n",
         "\n",
-        "# Second hidden layer\n",
+        "# First hidden layer\n",
         "nn.add(tf.keras.layers.Dense(units=30, activation='relu'))\n",
         "\n",
         "# Output layer\n",
